// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginConnectButton should match the snapshot, when connect type is AgentConnect 1`] = `
<div>
  <div
    class="fr-connect-group"
    data-testid="LoginConnectButton"
  >
    <button
      class="fr-connect"
      type="button"
    >
      <span
        class="fr-connect__login"
      >
        S’identifier avec
      </span>
      <span
        class="fr-connect__brand"
      >
        AgentConnect
      </span>
    </button>
  </div>
</div>
`;

exports[`LoginConnectButton should match the snapshot, when connect type is FranceConnect 1`] = `
<div>
  <div
    class="fr-connect-group"
    data-testid="LoginConnectButton"
  >
    <button
      class="fr-connect"
      type="button"
    >
      <span
        class="fr-connect__login"
      >
        S’identifier avec
      </span>
      <span
        class="fr-connect__brand"
      >
        FranceConnect
      </span>
    </button>
  </div>
</div>
`;

exports[`LoginConnectButton should match the snapshot, when default values 1`] = `
<div>
  <div
    class="fr-connect-group"
    data-testid="LoginConnectButton"
  >
    <button
      class="fr-connect"
      type="button"
    >
      <span
        class="fr-connect__login"
      >
        S’identifier avec
      </span>
      <span
        class="fr-connect__brand"
      >
        FranceConnect
      </span>
    </button>
  </div>
</div>
`;

exports[`LoginConnectButton should match the snapshot, when showHelp is false 1`] = `
<div>
  <div
    class="fr-connect-group"
    data-testid="LoginConnectButton"
  >
    <button
      class="fr-connect"
      type="button"
    >
      <span
        class="fr-connect__login"
      >
        S’identifier avec
      </span>
      <span
        class="fr-connect__brand"
      >
        FranceConnect
      </span>
    </button>
  </div>
</div>
`;

exports[`LoginConnectButton should match the snapshot, when showHelp is true 1`] = `
<div>
  <div
    class="fr-connect-group"
    data-testid="LoginConnectButton"
  >
    <button
      class="fr-connect"
      type="button"
    >
      <span
        class="fr-connect__login"
      >
        S’identifier avec
      </span>
      <span
        class="fr-connect__brand"
      >
        FranceConnect
      </span>
    </button>
    <p>
      <a
        href="https://franceconnect.gouv.fr/"
        title="Qu’est ce que FranceConnect ? - nouvelle fenêtre"
      >
        Qu’est ce que FranceConnect ?
      </a>
    </p>
  </div>
</div>
`;

exports[`LoginConnectButton should match the snapshot, when type is submit 1`] = `
<div>
  <div
    class="fr-connect-group"
    data-testid="LoginConnectButton"
  >
    <button
      class="fr-connect"
      type="submit"
    >
      <span
        class="fr-connect__login"
      >
        S’identifier avec
      </span>
      <span
        class="fr-connect__brand"
      >
        FranceConnect
      </span>
    </button>
  </div>
</div>
`;
